--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # Development Environment Variables (for testing)
 NODE_ENV=development
-PORT=4022
+PORT="""
 
 # Database (MongoDB not required for initial testing)
 MONGODB_URI=mongodb://localhost:27017/ebanking
